src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__expr_after_block.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtExpr(
    ExprBlock {
        body: [],
        tail: None,
    },
)
ExprInt {
    value: 0,
}
