src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__expr_block.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtExpr(
    ExprBlock {
        body: [],
        tail: None,
    },
)
StmtExpr(
    ExprBlock {
        body: [],
        tail: Some(
            ExprInt {
                value: 0,
            },
        ),
    },
)
StmtExpr(
    ExprBlock {
        body: [
            StmtExpr(
                ExprInt {
                    value: 0,
                },
            ),
        ],
        tail: Some(
            ExprInt {
                value: 1,
            },
        ),
    },
)
StmtExpr(
    ExprBlock {
        body: [],
        tail: Some(
            ExprBlock {
                body: [],
                tail: None,
            },
        ),
    },
)
StmtExpr(
    ExprBlock {
        body: [
            StmtExpr(
                ExprBlock {
                    body: [],
                    tail: None,
                },
            ),
        ],
        tail: Some(
            ExprBlock {
                body: [],
                tail: None,
            },
        ),
    },
)
StmtExpr(
    ExprBlock {
        body: [],
        tail: Some(
            ExprBlock {
                body: [],
                tail: Some(
                    ExprInt {
                        value: 0,
                    },
                ),
            },
        ),
    },
)
StmtExpr(
    ExprBlock {
        body: [
            StmtExpr(
                ExprBlock {
                    body: [],
                    tail: Some(
                        ExprInt {
                            value: 0,
                        },
                    ),
                },
            ),
        ],
        tail: Some(
            ExprBlock {
                body: [],
                tail: Some(
                    ExprInt {
                        value: 1,
                    },
                ),
            },
        ),
    },
)
StmtExpr(
    ExprBlock {
        body: [],
        tail: Some(
            ExprBlock {
                body: [
                    StmtExpr(
                        ExprInt {
                            value: 0,
                        },
                    ),
                ],
                tail: Some(
                    ExprInt {
                        value: 1,
                    },
                ),
            },
        ),
    },
)
ExprBlock {
    body: [
        StmtExpr(
            ExprBlock {
                body: [
                    StmtExpr(
                        ExprInt {
                            value: 0,
                        },
                    ),
                ],
                tail: Some(
                    ExprInt {
                        value: 1,
                    },
                ),
            },
        ),
    ],
    tail: Some(
        ExprBlock {
            body: [
                StmtExpr(
                    ExprInt {
                        value: 1,
                    },
                ),
            ],
            tail: Some(
                ExprInt {
                    value: 2,
                },
            ),
        },
    ),
}
