src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__expr_block_with_semi.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtExpr(
    ExprBlock {
        body: [],
        tail: None,
    },
)
ExprBlock {
    body: [],
    tail: None,
}
