src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__expr_fn_call.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtExpr(
    ExprCall {
        callee: ExprIdent {
            name: f,
        },
        args: [],
    },
)
StmtExpr(
    ExprCall {
        callee: ExprIdent {
            name: f,
        },
        args: [
            ExprInt {
                value: 1,
            },
        ],
    },
)
StmtExpr(
    ExprCall {
        callee: ExprIdent {
            name: f,
        },
        args: [
            ExprInt {
                value: 1,
            },
        ],
    },
)
StmtExpr(
    ExprCall {
        callee: ExprIdent {
            name: f,
        },
        args: [
            ExprInt {
                value: 1,
            },
            ExprInt {
                value: 2,
            },
            ExprInt {
                value: 3,
            },
        ],
    },
)
StmtExpr(
    ExprCall {
        callee: ExprIdent {
            name: f,
        },
        args: [
            ExprInt {
                value: 1,
            },
            ExprInt {
                value: 2,
            },
            ExprInt {
                value: 3,
            },
        ],
    },
)
