src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__expr_group.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtExpr(
    ExprInt {
        value: 0,
    },
)
StmtExpr(
    ExprCall {
        callee: ExprIdent {
            name: f,
        },
        args: [],
    },
)
