src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__expr_if.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtExpr(
    ExprIf {
        branches: [
            IfBranch {
                cond: ExprInt {
                    value: 0,
                },
                body: ExprBlock {
                    body: [],
                    tail: None,
                },
            },
        ],
        tail: None,
    },
)
StmtExpr(
    ExprIf {
        branches: [
            IfBranch {
                cond: ExprInt {
                    value: 0,
                },
                body: ExprBlock {
                    body: [],
                    tail: None,
                },
            },
        ],
        tail: Some(
            ExprBlock {
                body: [],
                tail: None,
            },
        ),
    },
)
ExprIf {
    branches: [
        IfBranch {
            cond: ExprInt {
                value: 0,
            },
            body: ExprBlock {
                body: [],
                tail: None,
            },
        },
        IfBranch {
            cond: ExprInt {
                value: 0,
            },
            body: ExprBlock {
                body: [],
                tail: None,
            },
        },
    ],
    tail: Some(
        ExprBlock {
            body: [],
            tail: None,
        },
    ),
}
