src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__expr_str.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtExpr(
    ExprStr {
        value: ,
    },
)
StmtExpr(
    ExprStr {
        value: asdf,
    },
)
StmtExpr(
    ExprStr {
        value: 👽,
    },
)
