src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__stmt_fn_multi_param.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtFn {
    name: f,
    params: [
        a,
        b,
        c,
    ],
    body: ExprBlock {
        body: [],
        tail: None,
    },
}
StmtFn {
    name: f,
    params: [
        a,
        b,
        c,
    ],
    body: ExprBlock {
        body: [],
        tail: None,
    },
}
